--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <html>
 <body style="background-color:black;">
 <center>
-<img src="lyon.gif">
+<img src="lyon.gif"> <br><br><br>
+<img src="lyon 2.gif"> <br><br><br>
+<img src="lyon.png" height=320px>
 </center>
 </body>
 </html>
