--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <center>
 <img src="lyon.gif"> <br><br><br>
 <img src="lyon 2.gif"> <br><br><br>
-<img src="lyon.png" height=320px>
+<img src="lyon.png" height=320px><br><br><br>
+<p>hi</p>
 </center>
 </body>
 </html>
