--- a/index.html
+++ b/index.html
@@ -1,10 +1,22 @@
 <html>
-<body style="background-color:black;">
-<center>
-<img src="lyon.gif"> <br><br><br>
-<img src="lyon 2.gif"> <br><br><br>
-<img src="lyon.png" height=320px><br><br><br>
-<p>hi</p>
-</center>
-</body>
+	<head>
+		<title>leon archive dot org</title>
+		<link rel="stylesheet" href="style.css">
+	</head>
+	<body>
+		<center>
+			<br><br><br>
+			<img src="lyon.gif"> <br><br><br>
+			<img src="lyon 2.gif"> <br><br><br>
+			<p>Do you want THIS dude walking on your screen like this?!?!?!</p><br>
+			<img src="shimeji1.gif" height="180px">
+			<img src="shimeji2.gif" height="180px"><br>
+			<p>well you can</p>
+			<h2>HAVE HIM TODAY</h2><br>
+			<h1>DOWNLOAD HIM <a href="https://mega.nz/file/dv8mFIxL#g7t_fqPm7IgqAjUn1J48E4KjdAq44zBeUFKrzIH6now">HERE</a> ! ! ! !</h1>
+			<p>(MEGA download link, requires Shimeji already installed)</p><br>
+			<marquee>THIS SITE FUCKING SUCKSSSSSSSSSSSSSSS</marquee>
+		</center>
+		<p class="descp">the contedxt for this site is that it was a funny joke (changing mod archive . org to leon archive . org) so now it exists on the web and it will be DEAD and GONE in september of next year.</p>
+	</body>
 </html>
