--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
 	<body>
 		<center>
 			<br><br><br>
+			<h1>SHITPOST OF THE WEEK:</h1>
+			<video width="640" height="480" controls>
+				<source src="53696158_8p1puEiZ6Ya1CfoIWp2AHGZ8pFfIU1_Fgps4zEDbe50-1307168287.mp4" type="video/mp4">
+			</video>
+			<br><br><br>
+			<hr width="180px">
+			<br><br><br>
 			<img src="lyon.gif"> <br><br><br>
 			<img src="lyon2.gif"> <br><br><br>
 			<p>Do you want THIS dude walking on your screen like this?!?!?!</p><br>
