added more stuff.

--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
 			<br><br><br>
 			<hr width="180px">
 			<br><br><br>
-			<img src="lyon.gif"> <br><br><br>
-			<img src="lyon2.gif"> <br><br><br>
+			<img src="lyon.gif">
+			<img src="lyon2.gif"> 
+			<br><br>
+			<hr width="180px">
 			<p>Do you want THIS dude walking on your screen like this?!?!?!</p><br>
 			<img src="shimeji1.gif" height="180px">
 			<img src="shimeji2.gif" height="180px"><br>
@@ -22,6 +24,11 @@
 			<h2>HAVE HIM TODAY</h2><br>
 			<h1>DOWNLOAD HIM <a href="https://mega.nz/file/dv8mFIxL#g7t_fqPm7IgqAjUn1J48E4KjdAq44zBeUFKrzIH6now">HERE</a> ! ! ! !</h1>
 			<p>(MEGA download link, requires Shimeji already installed)</p><br>
+			<hr width="180px"> <br><br>
+			<img src="sakuyalyon.gif"><br><br>
+			<hr width="180px"> <br>
+			<img src="quote.png" height="600px"><br>
+			<img src="thanks.gif">
 			<marquee>THIS SITE FUCKING SUCKSSSSSSSSSSSSSSS</marquee>
 		</center>
 	</body>
