updated download link

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			<img src="shimeji2.gif" height="180px"><br>
 			<p>well you can</p>
 			<h2>HAVE HIM TODAY</h2><br>
-			<h1>DOWNLOAD HIM <a href="https://mega.nz/file/dv8mFIxL#g7t_fqPm7IgqAjUn1J48E4KjdAq44zBeUFKrzIH6now">HERE</a> ! ! ! !</h1>
+			<h1>DOWNLOAD HIM <a href="https://mega.nz/file/gBciAJDK#1LgBdLlWIz7Ka-FNwiZLyVARsnNono_V4vEd5ndVo7Y">HERE</a> ! ! ! !</h1>
 			<p>(MEGA download link, requires Shimeji already installed)</p><br>
 			<hr width="180px"> <br><br>
 			<img src="sakuyalyon.gif"><br><br>
