too lazy to write it all

--- a/index.html
+++ b/index.html
@@ -5,31 +5,12 @@
 	</head>
 	<body>
 		<center>
-			<br><br><br>
-			<h1>SHITPOST OF THE WEEK:</h1>
-			<video width="640" height="480" controls>
-				<source src="53696158_8p1puEiZ6Ya1CfoIWp2AHGZ8pFfIU1_Fgps4zEDbe50-1307168287.mp4" type="video/mp4">
-			</video>
-			<br><br><br>
-			<hr width="180px">
-			<br><br><br>
-			<img src="lyon.gif">
-			<img src="lyon2.gif"> 
-			<br><br>
-			<hr width="180px">
-			<p>Do you want THIS dude walking on your screen like this?!?!?!</p><br>
-			<img src="shimeji1.gif" height="180px">
-			<img src="shimeji2.gif" height="180px"><br>
-			<p>well you can</p>
-			<h2>HAVE HIM TODAY</h2><br>
-			<h1>DOWNLOAD HIM <a href="https://mega.nz/file/gBciAJDK#1LgBdLlWIz7Ka-FNwiZLyVARsnNono_V4vEd5ndVo7Y">HERE</a> ! ! ! !</h1>
-			<p>(MEGA download link, requires Shimeji already installed)</p><br>
-			<hr width="180px"> <br><br>
-			<img src="sakuyalyon.gif"><br><br>
-			<hr width="180px"> <br>
-			<img src="quote.png" height="600px"><br>
-			<img src="thanks.gif">
-			<marquee>THIS SITE FUCKING SUCKSSSSSSSSSSSSSSS</marquee>
+			<h1>Soph's little art corner</h1>
+			<p>Hey there! Welcome to my website. It's still quite jank but that's okay, I'll fix it up in the future. (hopefully</p>
+			<p>The point of this website is to be a sort of a "portfolio" for my art and other goodies that I make. It started out as an inside joke (hence the name leon archive dot org) but I figured I'd give some purpose for it.</p>
+			<p>That being said, feel free to look at some of my artwork, or download some goodies using the links below :D</p>
+			<h2><a href="#">Artworks (WIP)</a></h2><h2><a href="freebies.html">Downloadable goods</a></h2>
+			<hr>
 		</center>
 	</body>
 </html>
