--- a/freebies.html
+++ b/freebies.html
@@ -35,7 +35,7 @@
             <img src="shimeji2.gif">
             <hr width="180px">
             <h2>Download:</h2>
-            <a href="https://soph.osyu.sh/goodies/Leon_von_Alvensleben.zip">.zip Folder</a>
+            <a href="https://soph.osyu.sh/goodies/Leon von Alvensleben.zip">.zip Folder</a>
             <hr width="180px">
             <a href="index.html">Go back</a>
             <hr width="180px">
