--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 		<center>
 			<h1>Soph's little art corner</h1>
 			<p>Hey there! Welcome to my website. It's still quite jank but that's okay, I'll fix it up in the future. (hopefully</p>
-			<p>The point of this website is to be a sort of a "portfolio" for my art and other goodies that I make. It started out as an inside joke (hence the name leon archive dot org) but I figured I'd give some purpose for it.</p>
+			<p>The point of this website is to be a sort of a "portfolio" for my art and other goodies that I make. It started out as an inside joke (hence the name leon archive dot org) but I figured I'd give some purpose to it.</p>
 			<p>That being said, feel free to look at some of my artwork, or download some goodies using the links below :D</p>
-			<h2><a href="#">Artworks (WIP)</a></h2><h2><a href="freebies.html">Downloadable goods</a></h2>
+			<h2><a href="#">Artworks</a></h2><h2><a href="freebies.html">Downloadable stuff</a></h2>
 			<hr>
 		</center>
 	</body>
