--- a/freebies.html
+++ b/freebies.html
@@ -6,6 +6,8 @@
 	<body>
 		<center>
 			<h1>FREE DOWNLOADS</h1>
+            <p>This is where you can find other stuff that I made/worked on that isn't strictly artworks.</p>
+            <hr width="50%">
 			<h2>Leon von Alvensleben 3D Model</h2>
             <p>A model of Leon from Katana ZERO. Created in July 2025.</p>
             <p>Has a rig, both for his body and his face.</p>
@@ -24,7 +26,8 @@
             <h2>Download:</h2>
             <a href="https://soph.osyu.sh/goodies/Leon.glb">.glb Version</a>
             <a href="https://soph.osyu.sh/goodies/Leon.fbx">.fbx Version</a>
-            <hr width="180px">
+            <br><br>
+            <hr width="50%">
             <h2>Leon von Alvensleben Desktop Pet</h2>
             <p>A Shimeji I made in April 2024.</p>
             <p>NOTE: Requires shimejie for it to work. Drop the extracted folder in the /img folder.</p>
@@ -33,12 +36,30 @@
             <img src="shimeji1.gif">
             <br><br>
             <img src="shimeji2.gif">
+            <br><br>
             <hr width="180px">
             <h2>Download:</h2>
             <a href="https://soph.osyu.sh/goodies/Leon_von_Alvensleben.zip">.zip Folder</a>
+            <br><br>
+            <hr width="50%">
+            <h2>New Mecca's Second District Neo-Noir Video Store Cashier Simulator</h2>
+            <p>A game I worked on alongside <a href="https://bibizu.itch.io/">Bibizu</a> and <a href="https://jamsbyjam.bandcamp.com/">Jam</a>.</p>
+            <p>Made for the Katana ZERO 2024 Game Jam.</p>
+            <hr width="180px">
+            <h2>Example images:</h2>
+            <img src="assets/vscs1.png">
+            <br><br>
+            <img src="assets/vscs2.png">
+            <br><br>
+            <img src="assets/vscs3.png">
+            <br><br>
+            <hr width="180px">
+            <h2><a href="https://bibizu.itch.io/video-game-store-cashier-simulator">Download on itch.io</a></h2>
             <hr width="180px">
             <a href="index.html">Go back</a>
             <hr width="180px">
+            <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+            <img src="lyon.png" height="5%">
 		</center>
 	</body>
 </html>
