--- a/old.html
+++ b/old.html
@@ -1,7 +1,21 @@
 <html>
     <head>
         <title>leon archive dot org</title>
-		<link rel="stylesheet" href="style.css">
+		<style>
+			body{
+    			background-color: black;
+				color: white;
+			}
+			marquee{
+				font-size: 32px;
+			}
+			.descp{
+				font-size: 24px;
+			}
+			p{
+				font-size: 18px;
+			}
+		</style>
     </head>
     <body>
         <center>
