--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>leon archive dot org</title>
+		<title>sopharchive.org</title>
 		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
